# QuickBitmap

./: README-zh_CN.md  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
docs/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
docs/com/tianscar/quickbitmap/: BitmapChanger.html  BitmapDecoder.html  BitmapEncoder.Callback.html  BitmapEncoder.CompressFormat.html  BitmapEncoder.html  BitmapLruCache.OnEntryRemovedListener.html  BitmapLruCache.html  BitmapPool.html  BitmapUtils.html  package-summary.html  package-tree.html
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/jni/: com_tianscar_quickbitmap_NativeMethods.h  quickbitmap-jni.cpp
module/src/main/cpp/lib/: bitmaputil.cpp  bitmaputil.h  bmpencoder.cpp  bmpencoder.h  bmpstruct.h  fill.cpp  fill.h
test/: build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/java/com/tianscar/test/: MainActivity.java
test/src/main/res/drawable/: ic_launcher_background.xml
test/src/main/res/drawable-v24/: ic_launcher_foreground.xml
test/src/main/res/layout/: activity_main.xml
test/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
test/src/main/res/values/: colors.xml  strings.xml  themes.xml
test/src/main/res/values-night/: themes.xml
(+10 files in other folders)
